# Curso_ComputacionGraficaAvanzada

./: .gitignore  CMakeLists.txt  ComputacionGraficaAvanzada.sln
00-Introduccion/: 00-Introduccion.vcxproj  CMakeLists.txt
00-Introduccion/src/: main.cpp
01-AnimacionKeyFrames/: 01-AnimacionKeyFrames.vcxproj  CMakeLists.txt  helicopter.blend
01-AnimacionKeyFrames/src/: buzz.hpp  main.cpp
02-SkeletonAnimation/src/: main.cpp
03-Terrain/: 03-Terrain.vcxproj
03-Terrain - copia/src/: main.cpp
03-Terrain/src/: main.cpp
CGALib/: CGALib.vcxproj  CMakeLists.txt
CGALib/include/Headers/: Colisiones.h  Texture.h  TimeManager.h
CGALib/src/: BuzzModel.cpp  FontTypeRendering.cpp  Shader.cpp  Terrain.cpp  Texture.cpp
Shaders/: terrain.fs
models/Helicopter/: Mi_24_heli_rear.mtl
models/Lamborginhi_Aventador_OBJ/: Lamborghini_Aventador_front_left_wheel.mtl  Lamborghini_Aventador_front_right_wheel.mtl  Lamborghini_Aventador_rear_left_wheel.mtl  Lamborghini_Aventador_rear_right_wheel.mtl  coordenadasWheels.txt  wheels.blend  wheels.blend1
models/cyborg/: cyborg2.fbx
